Changes with Apache 1.3.1

  *) suexec's error messages have been clarified a little bit.  [Ken Coar]

  *) PORT: Apache is not 8-bit clean in many settings, a problem we're
     aware of and intend to fix properly.  But a temporary workaround
     which should work for many folks is to tell the C compiler to use
     "unsigned char"s.  For gcc this means adding -funsigned-char.
     -funsigned-char is the default now for Linux 2.x and FreeBSD
     2 and 3.  [Dean Gaudet] PR#800, 2282, 2553

  *) The "handler not found" error was issued in cases where the handler
     really did exist, but was just declining to serve the request.
     [John Van Essen <jve@gamers.org>] PR#2529

  *) Add Dynamic Shared Object (DSO) support for SCO5 (OpenServer 5.0.x).
     [Ronald Record <rr@sco.com>] PR#2533

  *) The APACI libexecdir was not extended with an "apache/" subdir
     if the installation prefix doesn't already contain "apache". Although
     it is useful because the DSO files are totally Apache-specific. Now
     libexecdir is treated the same way sysconfdir, datadir, localstatedir
     and includedir are already treated.
     [Charles Levert <charles@comm.polymtl.ca>] PR#2551

  *) The <Limit> parsing routine was incorrectly treating methods in
     a case-insensitive way.  [Ken Coar]

  *) The ap_bprintf() code neglected to test if there was an error on
     the connection.  ap_bflush() misdiagnosed a failure as a success.
     [Dean Gaudet]

  *) add support for #perl arg interpolation in mod_include
     [Doug MacEachern]

  *) API: Name changes of table_elts to ap_table_elts, is_table_empty
     to ap_is_table_empty and bgetflag to ap_bgetflag. [Ben Laurie]

  *) PORT: Add UnixWare 7 support
     [Vadim Kostoglodoff <vadim@olly.ru>] PR#2463

  *) Fix the Guess-DSO-flags-from-Perl stuff in src/Configure: "perl" was
     used instead of "$PERL" which contains the correctly determined Perl
     interpreter (important for instance on systems where "perl" and "perl5"